test/types.ts.expected
test/types.ts(8,5): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
test/types.ts(23,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
test/types.ts(40,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
test/types.ts(58,15): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
test/types.ts(82,5): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
test/types.ts(110,5): error TS2345: Argument of type '{ numTimes: number; }' is not assignable to parameter of type 'CheckOptions | undefined'.
  Object literal may only specify known properties, and 'numTimes' does not exist in type 'CheckOptions | undefined'.
test/types.ts(133,20): error TS2345: Argument of type '{ name: Generator<string>; }' is not assignable to parameter of type '{ name: Generator<string>; age: Generator<number>; }'.
  Property 'age' is missing in type '{ name: Generator<string>; }'.
test/types.ts(141,3): error TS2345: Argument of type '{ name: Generator<string>; age: Generator<number>; likesDancing: Generator<boolean>; }' is not assignable to parameter of type '{ name: Generator<string>; age: Generator<number>; }'.
  Object literal may only specify known properties, and 'likesDancing' does not exist in type '{ name: Generator<string>; age: Generator<number>; }'.
test/types.ts(154,20): error TS2345: Argument of type '{ child: Generator<{ name: any; }>; }' is not assignable to parameter of type '{ child: Generator<Person>; }'.
  Types of property 'child' are incompatible.
    Type 'Generator<{ name: any; }>' is not assignable to type 'Generator<Person>'.
      Type '{ name: any; }' is not assignable to type 'Person'.
        Property 'age' is missing in type '{ name: any; }'.
test/types.ts(161,5): error TS2322: Type 'Generator<{ name: any; }>' is not assignable to type 'Generator<{ name: number; }>'.
  Type '{ name: any; }' is not assignable to type '{ name: number; }'.
    Types of property 'name' are incompatible.
      Type 'string' is not assignable to type 'number'.
